# stereo_vision_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
calib/: hsvValues  left_cam.yaml  right_cam.yaml
camera_config_files/: OV5647_MIPI_2Lane_RAW8_8b_2592x1944_AB.cfg
launch/: arducam_node.launch  rviz_pointCloud_config.rviz  stereo_vision.launch
scripts/: HsvTesdt.py  TestTouchSensing.py  arducam.rules  create_udev_rules.sh
scripts/ledControl/: ledControl.ino
scripts/ledControl/ledControlV2.ino/: ledControlV2.ino.ino
src/: arducam_manager.py  arducam_ros_node.py  display_test.py  led_manager.py  pickleTest  pickleTest_AI  pickleTest_interpol  pickleTest_normal  stereo_depth_node.py  stereo_rectifier_node.py  stereo_touch_node.py  stereo_touch_node_with_AI.py  stereo_vision_node.py  utils_stereovision.py
srv/: ChangeModality.srv  GiveDepth.srv
