<?xml version="1.0"?>
<package format="2">
  <name>stereo_vision_ros</name>
  <version>1.0.0</version>
  <description>The stereo_vision_ros package</description>

  <maintainer email="etienne.roberge.1@ens.etsmtl.ca">Etienne Roberge</maintainer>

  <license>BSD</license>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <exec_depend>camera_info_manager_py</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
